--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -28,8 +28,8 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
 }
 
 .sidebar {
-  width: 18%;
-  height: 100vh;
+  width: 20%;
+   height: auto;
   border-radius: 8px;
   padding-top: 29px;
   padding-left: 17px;
@@ -68,10 +68,8 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 4px;
-  width: 100%;
-  overflow-y: auto;
-  max-height: calc(100vh - 250px);
+  gap: 6px;
+
 
   
 }
@@ -84,9 +82,9 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
   gap: 8px;
   padding: 6px 10px 6px 16px;
   border-radius: 90px;
-  font-family: Satoshi;
-  font-weight: 500;
-  font-size: 20px;
+  font-family: 'Satoshi', sans-serif;
+  font-weight: lighter;
+  font-size: 24px;
   line-height: 140%;
   letter-spacing: -0.02em;
   color: rgba(255, 255, 255, 0.3);
@@ -107,14 +105,14 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
     background: linear-gradient(90deg, #0B2C47 0%, #051725 100%);
     color: #FF6600;
     opacity: 1;
-    width: 240px;
+    width: 90%;
     height: 60px;
     border-radius: 90px;
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
     padding-left: 16px;
-    font-weight: 600;
+    font-weight: 400;
 
     .menu-icon {
       filter: brightness(0) saturate(100%) invert(48%) sepia(79%) saturate(2479%) hue-rotate(346deg) brightness(101%) contrast(101%);
@@ -158,7 +156,7 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
 }
 
 .sidebar-toggle {
-  background: rgba(255,255,255,0.07);
+  background: rgba(209, 0, 0, 0.07);
   border: none;
   border-radius: 50%;
   width: 45px;
@@ -228,13 +226,13 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
   padding-top: 0;
   width: 90%;
   .user-role {
-    font-family: Satoshi;
+ font-family: 'Satoshi', sans-serif;
     font-size: 12px;
     color: #aaa;
     margin-top: 2px;
   }
   span {
-    font-family: Satoshi;
+ font-family: 'Satoshi', sans-serif;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
@@ -255,8 +253,7 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
 }
 
 .dashboard-main-box {
-  // max-width: 1288px;
-  // width: 100%;
+
   margin: 32px auto;
   border-radius: 48px;
   padding: 24px;
@@ -265,6 +262,8 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
   flex-direction: column;
   gap: 24px;
   background: rgba(239, 239, 239, 1);
+ 
+  
 }
 
 .dashboard-header {
@@ -290,7 +289,7 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
   font-weight: 600;
   margin: 0;
   padding: 0;
-  font-family: Satoshi;
+ font-family: 'Satoshi', sans-serif;
 font-weight: 500px;
 font-size: 28px;
 line-height: 140%;
@@ -433,7 +432,7 @@ letter-spacing: 0px;
 
 .card.lorem-card {
   width: 100%;
-  height: 528.1455078125px;
+  height: auto;
   border-radius: 8px;
   box-shadow: 0px 5.62px 9.13px -2.11px rgba(0, 0, 0, 0.07);
 }
@@ -454,8 +453,8 @@ background: rgba(255, 255, 255, 1);
 }
 
 .customer-growth-card {
-  width: 350px;
-  height: 163px;
+  width: 480px;
+  height: 200px;
   gap: 10px;
   border-radius: 16px;
   padding: 12px 19px;
@@ -513,7 +512,40 @@ background: rgba(255, 255, 255, 1);
 
 
 
+.card-table {
+  width: 721px;
+  height: 424px;
+  border-radius: 8px;
+  padding: 20px 1px 20px 1px;
+  background: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 0;
+  box-shadow: 0 2px 8px rgba(24, 59, 90, 0.07);
+  overflow: hidden;
+}
 
+.orders-table {
+  width: 95%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  font-size: 1rem;
+  background: transparent;
+}
+
+.orders-table tbody {
+  display: block;
+  max-height: 220px; 
+  overflow-y: auto;
+}
+
+.orders-table thead,
+.orders-table tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
 .direc{
   display: flex;
   flex-direction: column;
@@ -722,3 +754,8 @@ gap: 10px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+body {
+  font-family: 'Satoshi', sans-serif;
+
+}
+
