--- a/client/src/pages/operation/op.scss
+++ b/client/src/pages/operation/op.scss
@@ -35,7 +35,7 @@ color: rgba(33, 43, 54, 1);
     top: 59.97px;
     left: 28px;
     border-radius: 8px;
-    box-shadow: 0px 5.62px 9.13px -2.11px rgba(0, 0, 0, 0.07);
+ 
     background: rgba(255, 255, 255, 1);
     display: flex;
     flex-direction: column;
@@ -137,10 +137,19 @@ font-size: 20px;
     overflow-y: auto;
 }
 
-.flex-op{
-    display: flex;
-    gap: 20px;
-    margin-bottom: 1%;
+.flex-op {
+  display: flex;
+  gap: 20px;
+
+  @media screen and (max-width: 1024px) {
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    gap: 12px;
+  }
 }
 .op-side{
 display: flex;
@@ -243,7 +252,7 @@ color: rgb(61, 104, 244);
         display: flex;
         gap: 10px;
         font-size: 20px;
-       color: rgba(53, 68, 84, 0.83);
+       color: #000;
 
     }
 }
@@ -264,6 +273,9 @@ color: rgb(61, 104, 244);
 @media screen and (max-width: 1024px) {
   .flex-op {
     gap: 10px;
+      flex-direction: column;
+  justify-content: center;
+  align-items: center;
   }
 
   .left-op {
@@ -282,6 +294,32 @@ color: rgb(61, 104, 244);
     }
   }
 
+  .left-op {
+  width: 15%;
+
+  @media screen and (max-width: 1024px) {
+    width: 100%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    label {
+      font-size: 14px;
+      flex: 1 1 30%;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    width: 100%;
+
+    label {
+      font-size: 12px;
+    }
+  }
+}
+
+
   .right-op {
     width: 75%;
     padding: 10px;
@@ -299,6 +337,18 @@ color: rgb(61, 104, 244);
       font-size: 14px;
     }
   }
+
+  .right-op {
+  width: 80%;
+
+  @media screen and (max-width: 1024px) {
+    width: 100%;
+  }
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
+}
 
   .op-side {
     padding-right: 1%;
@@ -429,4 +479,185 @@ color: rgb(61, 104, 244);
 .op-f-order{
 
 
+}
+
+.op-f {
+  width: 450px;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    height: 35px;
+    padding: 6px 10px;
+
+    .op-inp {
+      height: 35px;
+      font-size: 13px;
+    }
+  }
+}
+
+.one-input-op {
+  display: flex;
+  justify-content: space-between;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    gap: 12px;
+  }
+}
+
+.second-input-op {
+  gap: 20px;
+
+  @media screen and (max-width: 768px) {
+    gap: 12px;
+  }
+}
+
+.flex-operation {
+  display: flex;
+  justify-content: space-between;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    gap: 10px;
+    
+  }
+}
+
+.crt-op {
+  width: 97%;
+  height: 42px;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    font-size: 14px;
+    height: 36px;
+  }
+}
+
+.MuiModal-root {
+  overflow-y: auto;
+}
+
+
+@media screen and (max-width: 1024px) {
+  .css-1yxry8n{
+    position: absolute;
+    top: 65% !important;
+  }
+}
+
+.flex-opss{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
+  padding-top: 5%;
+}
+
+.op-fs{
+    display: flex;
+  width: 250px;
+  height: 43px;
+  border-radius: 12px;
+  padding: 8px 12px;
+  gap: 10px;
+  background: rgba(239, 239, 239, 0.53);
+  align-items: center;
+  justify-content: center;
+    .op-inps {
+    width: 90%;
+    height: 43px;
+    background-color: transparent !important;
+    border: none;
+
+    &::placeholder {
+      color: #aaa;            
+      opacity: 1;               
+    }
+
+    &:focus {
+      border: none;
+      outline: none;
+      box-shadow: none;
+    }
+  }
+}
+
+
+
+.black{
+  font-family: Roboto;
+font-weight: 500;
+font-size: 15px;
+line-height: 140%;
+letter-spacing: 0%;
+
+}
+
+.op-fat{
+  display: flex;
+  width: 250px;
+  height: 133px;
+  border-radius: 12px;
+  padding: 8px 12px;
+  gap: 10px;
+  background: rgba(239, 239, 239, 0.53);
+
+
+    .op-inpf {
+ 
+    background-color: transparent !important;
+    border: none;
+
+    &::placeholder {
+      color: #aaa;            
+      opacity: 1;               
+    }
+
+    &:focus {
+      border: none;
+      outline: none;
+      box-shadow: none;
+    }}
+}
+
+.op-fa{
+  display: flex;
+  height: 140px;
+  border-radius: 12px;
+  padding: 8px 12px;
+  gap: 10px;
+  background: rgba(239, 239, 239, 0.53);
+
+
+    .op-inpa {
+ 
+    background-color: transparent !important;
+    border: none;
+
+    &::placeholder {
+      color: #aaa;            
+      opacity: 1;               
+    }
+
+    &:focus {
+      border: none;
+      outline: none;
+      box-shadow: none;
+    }}
+}
+
+.eod-label {
+  color: rgb(48, 86, 211);
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 140%;
+  letter-spacing: 0%;
+}
+
+select.op-inp {
+  color: rgba(6, 34, 56, 0.2);
 }
