--- a/client/src/pages/Cli/cli.scss
+++ b/client/src/pages/Cli/cli.scss
@@ -63,22 +63,20 @@
     align-items: center;
     gap: 16px;
 
-    .search-container {
-      width: 269px;
+    .search-containers {
+      width: 250px;
       height: 42px;
       border-radius: 64px;
-      padding: 8px 20px;
-      gap: 10px;
       display: flex;
       align-items: center;
-      background: #f3f4f6;
+      background: rgb(229, 229, 229);
+      position: relative;
+      padding: 0 15px;
+
+    
+
     }
 
-    .search-icon {
-      display: flex;
-      align-items: center;
-      margin: 0;
-    }
     .download-excel {
       width: 183px;
       height: 42px;
@@ -576,7 +574,7 @@
   border-radius: 6px;
   height: 36px;
   width: 100px;
-  font-size: 13px;
+  font-size: 12px;
   color: #222;
 }
       .client-table {
@@ -789,3 +787,38 @@
     gap: 8px;
   }
 }
+
+    .search-containers {
+      width: 250px;
+      height: 42px;
+      border-radius: 64px;
+   
+      gap: 10px;
+      display: flex;
+      align-items: center;
+         background: rgb(235, 235, 235);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    
+      .search-icons {
+
+        display: flex;
+        align-items: center;
+      
+      }
+        .search-inputs {
+        width: 80%;
+        background: transparent;
+        border: none;
+        outline: none;
+        padding-right: 30px;
+   
+      }
+
+      .sear{
+        font-size: 23px;
+        margin-right: 15px;
+    
+      }
