--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -378,30 +378,28 @@ letter-spacing: 0px;
   padding: 8px 20px;
   background: rgba(229, 229, 229, 1);
   border: none;
-}
 
-.search-container input {
-  width: 100%;
-  height: 100%;
-  border: none;
-  background: transparent;
-  outline: none;
-  font-family: Satoshi;
-  font-size: 16px;
-  color: #111A23;
-}
+  input {
+    width: calc(100% - 30px);
+    height: 100%;
+    border: none;
+    background: transparent;
+    outline: none;
+    font-family: Satoshi;
+    font-size: 16px;
+    color: #111A23;
+    padding-right: 30px;
+  }
 
-.search-container input::placeholder {
-  color: #111A23;
-  opacity: 0.7;
-}
-
-.search-icon {
-  display: flex;
-  align-items: center;
-  color: #111A23;
-  cursor: pointer;
-  font-size: 18px;
+  .search-icon {
+    position: absolute;
+    right: 15px;
+    display: flex;
+    align-items: center;
+    color: #111A23;
+    cursor: pointer;
+    font-size: 18px;
+  }
 }
 
 .notification-badge {
@@ -655,6 +653,17 @@ gap: 10px;
     width: 70px;
     min-width: 70px;
   }
+.dashboard-header-right{
+  display: flex;
+  gap: 20px;
+  .search-container{
+    width: 240px;
+  }
+  .search-input{
+    width: 60%;
+  }
+ 
+}
 
   .sidebar-logo img {
     width: 40px;
